[package]
name = "aniline"
version = "0.1.0"
edition = "2021"
authors = ["lonely-code-cube"]
description = "A cli tool to search, play, download anime, create playlists and"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lonely-code-cube/aniline"
repository = "https://github.com/lonely-code-cube/aniline"
keywords = ["anime", "download", "video", "cli", "player"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["application"]
application = ["clap"]

[lib]
name = "aniline"
path = "src/lib.rs"

[[bin]]
name = "aniline"
path = "src/bin/aniline.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"], optional = true}
crossterm = "0.25.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
terminal-menu = "2.0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
